<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_subscription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        android:text="@string/subscription_inactive"
        android:layout_marginBottom="32dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_name"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:autofillHints="@string/your_name"
        android:textAlignment="center"
        android:background="@drawable/bg_radius"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_activate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"
        tools:text="" />

    <Button
        android:id="@+id/btn_activate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/deactivate"
        android:background="@drawable/bg_button_radius"
        android:layout_width="200dp"
        android:layout_height="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>